<resources>
    <string name="app_name">MyMovieDataBase</string>
    <string name="new_header">New movies</string>
    <string name="hint_status">Status</string>
    <string name="popular_header">Popular movies</string>
    <string name="movie_name">Movie name</string>
    <string name="movie_released">Realised at</string>
    <string name="movie_genre">Movie genre</string>
    <string name="load_complete">Loaded!</string>
    <string name="movie_raitng">Movie rating</string>
    <string name="about_button">About app</string>
    <string name="back_button">Back</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="descritption">Description</string>
    <string name="error">Error!</string>
    <string name="reload">Reload!</string>
    <string name="accept">Accept</string>
    <string name="only_popular_movies">Only popular movies</string>
    <string name="only_new_movies">Only new movies</string>
    <string name="both_lists">Both lists</string>
    <string name="choose_visibility_settings">Choose visibility settings:</string>
    <string name="api_key">db54cff977d7322cf1ce7a7e533b3721</string>
    <string name="top_movies">Top rated movies</string>
    <string name="only_top_movies">Only top movies</string>
    <string name="movie_budget">Budget</string>
    <string name="movie_rating">Movie rating</string>
    <string name="poster">Poster</string>
    <string name="adult_settings">Adult content</string>
    <string name="adult_show">Show adult content</string>
    <string name="adult_hide">Don\'t show adult content</string>
    <string name="history">History</string>
    <string name="movie_note_header">My note</string>
    <string name="save_note">Save note</string>
    <string name="contacts">Contacts</string>
    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_meaasge">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>
    <string name="google_maps">Google Maps</string>
    <string name="default_address">Red Square, 1, Moscow</string>
    <string name="button_search_map">Search</string>
    <string name="marker_start">Start</string>
    <string name="Show_artists">Show artists</string>
    <string name="artist_test">Artist Test</string>
    <string name="place_of_birth">Place of Birth</string>
</resources>