<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <item
        android:id="@+id/about_button"
        app:showAsAction="never"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/about_button" />

    <item
        android:id="@+id/back_button"
        app:showAsAction="ifRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/back_button" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_android_black_24dp"
        app:showAsAction="never"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings" />

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_android_black_24dp"
        app:showAsAction="never"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/history" />

    <item
        android:id="@+id/menu_content_provider"
        android:title="@string/contacts"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</menu>