<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/actorPhoto"
        android:layout_width="198dp"
        android:layout_height="268dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/movie_name" />

    <TextView
        android:id="@+id/dateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:layout_marginBottom="241dp"
        android:hint="@string/movie_released"
        android:textSize="20sp"

        app:layout_constraintStart_toEndOf="@id/actorPhoto"
        app:layout_constraintTop_toBottomOf="@id/artistName" />

    <TextView
        android:id="@+id/popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/movie_raitng"
        android:textSize="20sp"

        app:layout_constraintStart_toEndOf="@id/actorPhoto"
        app:layout_constraintTop_toBottomOf="@id/dateOfBirth" />

    <TextView
        android:id="@+id/placeOfBirth"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_margin="15dp"
        android:hint="@string/place_of_birth"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/actorPhoto"
        app:layout_constraintTop_toBottomOf="@id/popularity" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/description_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actorPhoto">

        <TextView
            android:id="@+id/biography"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/descritption"
            android:textSize="20sp" />
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>